edited buttons with pushed-effect and added toast text on click

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,5 @@
     <string name="build_it_bigger">Build it bigger</string>
     <string name="bacon_reader">Bacon Reader</string>
     <string name="capstone">Capstone: My App</string>
-    <string name="popup_bottom">test</string>
+    <string name="popup_bottom"> </string>
 </resources>
